Add configuration settings

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,10 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "workstation id=parkinglotsystem.mssql.somee.com;packet size=4096;user id=nhatquang_sl_SQLLogin_1;pwd=h2omgkebzk;data source=parkinglotsystem.mssql.somee.com;persist security info=False;initial catalog=parkinglotsystem"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "LevelConfiguration": {
+    "Total": 5,
+    "RowPerLevel": 2,
+    "SpotPerRow": 5
+  }
 }
