--- a/src/Infrastructure/appsettings.Development.json
+++ b/src/Infrastructure/appsettings.Development.json
@@ -8,5 +8,20 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Loggly",
+        "Args": {
+          "customerToken": "0fc83835-ffa9-4cd8-a68f-aeeb13a73737",
+          "tags": "dev"
+        }
+      },
+      {
+        "Name": "Console"
+      }
+    ],
+    "Properties": { "Application": "Parking Lot System" }
   }
 }
