--- a/src/Infrastructure/appsettings.json
+++ b/src/Infrastructure/appsettings.json
@@ -14,5 +14,17 @@
     "Total": 5,
     "RowPerLevel": 2,
     "SpotPerRow": 5
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Loggly",
+        "Args": {
+          "customerToken": "0fc83835-ffa9-4cd8-a68f-aeeb13a73737",
+          "tags": "prod"
+        }
+      }
+    ],
+    "Properties": { "Application": "Parking Lot System" }
   }
 }
